apps/trek/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trek
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: trek.auch.cool
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trek
                port:
                  number: 3000
  tls:
    - hosts:
        - trek.auch.cool
      secretName: trek-tls
